# Evolith

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  VISION.md  docker-compose.yml  dummy_contribution.txt  pyproject.toml  requirements.txt  staging.db
.github/workflows/: ci.yml
api/: index.py
apps/api/: config.py  main.py  pyproject.toml  schema_init.py  staging.db
apps/api/agents/: __init__.py  base.py  extraction.py  hypothesis.py  knowledge_graph.py  orchestrator.py  verification.py
apps/api/api/: assistant.py  graph.py  papers.py
apps/api/crawler/: wikipedia.py
apps/api/extractors/: dna.py
apps/api/models/: __init__.py
apps/api/ontology/: physics.py
apps/api/pipeline/: __init__.py  chunker.py
apps/api/scripts/: regression_test.py
apps/api/staging/: models.py
apps/api/tests/: test_api.py
apps/api/writers/: neo4j_writer.py
apps/web/: README.md  package-lock.json  package.json  vitest.config.mts
backend/: README.md  database.py  pyproject.toml
backend/agents/: verification.py
backend/api/: graph.py  hypothesis.py  papers.py  reports.py
backend/pipeline/: canonical_pipeline.py  embedder.py  retriever.py
backend/schema/: models_v1_0.py
backend/staging/: database.py
backend/tests/: test_api.py
docs/architecture/: README.md
docs/research/: 0001-thesis.md  0002-ontology.md  0003-temporal-model.md  0004-ingestion.md  0005-evidence-model.md  (+4 more)
evolith/: package-lock.json  package.json
ontology/: v1.0.md
studio/: package-lock.json  package.json
(+57 files in other folders)
